# open-web-ui-document-parser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  utils.py
api/: chat_request.py  get_completion.py  get_completion_with_file.py  get_files.py  post_file.py
api/schemas/: ChatCompletion.py  FileMetadata.py
api/utils/: get_file_mime_type.py  get_file_name_From_path.py
components/: chat-request.py
