[project]
name = "openwebui-document-extracter"
version = "0.1.0"
description = ""
authors = [
    {name = "hiroji",email = "joegilbertdev@outlook.com"}
]
requires-python = ">=3.13"
dependencies = [
    "langchain-core (>=1.2.23,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
